oauth2_proxy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --email-domain=skyscrapers.eu
        - --client-id=oauth2_proxy
        - --client-secret=XT7rFMCP5CzjnLwTfDhBfw==
        - --oidc-discovery-url=https://kubesignin2.test.skyscrape.rs/dex
        - --cookie-secure=false
        - --cookie-secret=somethinghere
        - --upstream=file:///dev/null
        - --http-address=http://:4180
        - --redirect-url=https://proxy.test.skyscrape.rs/oauth2/callback
        # Register a new application
        # https://github.com/settings/applications/new
        image: quay.io/coreos/oauth2_proxy:coreos-v2.1
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP


#-provider oidc -client-id oauth2_proxy -client-secret proxy -redirect-url http://127.0.0.1:4180/oauth2/callback -oidc-discovery-url http://127.0.0.1:5556 -cookie-secure=false -email-domain example.com
---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
