oauth2_proxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
  labels:
    app: oauth2-proxy
spec:
  tls:
  - secretName: proxy.test.skyscrape.rs-lego-tls
    hosts:
    - proxy.test.skyscrape.rs
  rules:
  - host: proxy.test.skyscrape.rs
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: 4180
